Update license to a proper ID from https://spdx.org/licenses/

--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
 	"description": "for working with Ordnance Survey Open Data",
 	"keywords": [],
 	"homepage": "https://github.com/JMB-Technology-Limited/OSData",
-	"license": "BSD",
+	"license": "BSD-3-Clause",
 	"authors": [ ],
 	"require": {
 		"php": ">=5.3.0",
